<resources>
    <string name="app_name">RealMDatabaseExample</string>

    <string name="insert_data">Insert Data</string>
    <string name="read_data">Read Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>

    <string name="user_id">User ID</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
</resources>