<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60dp"
    tools:context="com.protocol.realmdatabaseexample.MainActivity">

    <include
        android:id="@+id/layout_include"
        layout="@layout/data_input" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_include"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInsertData"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/insert_data" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReadData"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/read_data" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateData"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/update_data" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteData"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/delete_data" />

    </LinearLayout>

</RelativeLayout>